# C-MicrostructureEngine

./: .gitignore  CMakeLists.txt  README.md  replay.html.session
MicrostructureEngine/: README.md
MicrostructureEngine/build_viz/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  microstructure_tests
MicrostructureEngine/include/microstructure/: consolidated_book.hpp  event.hpp  order_book.hpp  pipeline.hpp  replay.hpp
MicrostructureEngine/src/: order_book.cpp  pipeline.cpp  replay.cpp
MicrostructureEngine/tests/: test_main.cpp
VisualizationLayer/: CMakeLists.txt
VisualizationLayer/apps/: viz_demo.cpp
VisualizationLayer/docs/: VISUALIZATION.md
VisualizationLayer/include/visualization/: event_loader.hpp  export_schema.hpp  frame.hpp  frame_capture.hpp  frame_extractor.hpp  html_exporter.hpp  json_serializer.hpp  realistic_synthetic_generator.hpp  replay_walker.hpp  session.hpp  synthetic_event_generator.hpp  terminal_renderer.hpp
VisualizationLayer/src/: csv_event_loader.cpp  frame_capture.cpp  frame_extractor.cpp  html_exporter.cpp  json_serializer.cpp  realistic_synthetic_generator.cpp  replay_walker.cpp  session.cpp  synthetic_event_generator.cpp  terminal_renderer.cpp
VisualizationLayer/tests/: test_boundaries.cpp  test_event_loader.cpp  test_exporters.cpp  test_frame_extractor.cpp  test_realistic_generator.cpp  test_replay_walker.cpp  test_session.cpp  test_synthetic_generator.cpp
changelog/: changelog.md  checklist.md
include/microstructure/: book_view.hpp  exceptions.hpp  features.hpp  ml.hpp  types.hpp
src/: consolidated_book.cpp  event.cpp  features.cpp  ml.cpp  order_book.cpp
